fix: navigation item alignments

--- a/frontend/app/css/home.css
+++ b/frontend/app/css/home.css
@@ -184,12 +184,14 @@ footer {
   font-size:18px;
 }
 
+/* using icon fonts would be better.*/
 .nav-links {
-  vertical-align:sub;
   width:32px;
   height:32px;
-  margin-top:6px;
+  margin-top:-6px;
   display:inline-block;
+  float:left;
+  margin-right:5px;
 }
 
 .how-it-works {
